--- a/HealingArts/About.storyboard
+++ b/HealingArts/About.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="31M-F2-wMh">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -9,18 +13,56 @@
         <!--About-->
         <scene sceneID="YZy-Fa-zEG">
             <objects>
-                <viewController id="31M-F2-wMh" sceneMemberID="viewController">
+                <viewController id="31M-F2-wMh" customClass="AboutViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nln-gl-iDy">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jTO-6V-CnX">
+                                <rect key="frame" x="20" y="138" width="374" height="212"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fey-4S-Eqa">
+                                <rect key="frame" x="20" y="82" width="374" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DWs-bt-aIo">
+                                <rect key="frame" x="20" y="358" width="374" height="216.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <mutableString key="text">At the Fred and Pamela Buffett Cancer Center, healing is more than medicine.  The Healing Arts program exists to create environments that support and comfort people through the diverse art opportunities and experiences. 
+The Healing Arts program will be comprised of a growing list of elements to help reduce pain perception, anxiety, stress, loneliness, and depression; and to provide new insight and clarify feelings about a cancer diagnosis and treatment.  The center's program includes works by artists such as stained-glass artisan Dale Chihuly and local artist Jun Kaneko, as well as a section featuring a new artist every six months.</mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7De-Ib-Dfc">
+                                <rect key="frame" x="92" y="731" width="230" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="More Info">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="onInfoButtonPressed:" destination="31M-F2-wMh" eventType="touchUpInside" id="vhV-RL-bIy"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="zQJ-RX-R9C"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="About" id="Okd-1X-uCt"/>
+                    <connections>
+                        <outlet property="aboutPageInfoImageView" destination="jTO-6V-CnX" id="jhd-i4-OLL"/>
+                        <outlet property="infoButton" destination="7De-Ib-Dfc" id="nlu-fO-9Vg"/>
+                        <outlet property="infoTextView" destination="DWs-bt-aIo" id="Vca-uk-5Ow"/>
+                        <outlet property="titleLabel" destination="fey-4S-Eqa" id="7aw-vm-Dn9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q88-nm-CZT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2025" y="-1280"/>
+            <point key="canvasLocation" x="2024.6376811594205" y="-1280.3571428571429"/>
         </scene>
     </scenes>
 </document>
