--- a/HealingArts/Collection.storyboard
+++ b/HealingArts/Collection.storyboard
@@ -22,33 +22,44 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="c6U-mY-eDw">
-                                    <size key="itemSize" width="420" height="216"/>
+                                    <size key="itemSize" width="415.5" height="216"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="cellID" id="V68-uY-s9G" customClass="ArtworkCollectionViewCell" customModule="HealingArts" customModuleProvider="target">
-                                        <rect key="frame" x="-3" y="0.0" width="420" height="216"/>
+                                        <rect key="frame" x="-1" y="0.0" width="415.5" height="216"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="420" height="216"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="415.5" height="216"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jZ3-Jj-Okb">
-                                                    <rect key="frame" x="0.0" y="0.0" width="420" height="179"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jZ3-Jj-Okb">
+                                                    <rect key="frame" x="0.0" y="0.0" width="416" height="164"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RKB-kz-Bd6">
-                                                    <rect key="frame" x="172" y="187" width="77" height="29"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RKB-kz-Bd6">
+                                                    <rect key="frame" x="0.0" y="172" width="416" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="LPr-ma-Qea"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstItem="RKB-kz-Bd6" firstAttribute="leading" secondItem="jZ3-Jj-Okb" secondAttribute="leading" id="4zh-cb-QIi"/>
+                                            <constraint firstItem="RKB-kz-Bd6" firstAttribute="leading" secondItem="V68-uY-s9G" secondAttribute="leading" id="IFW-Nw-ewN"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="RKB-kz-Bd6" secondAttribute="bottom" constant="-14" id="UhO-Dk-fmL"/>
+                                            <constraint firstItem="RKB-kz-Bd6" firstAttribute="top" secondItem="jZ3-Jj-Okb" secondAttribute="bottom" constant="8" symbolic="YES" id="jLv-95-T3i"/>
+                                            <constraint firstAttribute="trailing" secondItem="RKB-kz-Bd6" secondAttribute="trailing" id="lDw-JO-Cnc"/>
+                                            <constraint firstItem="RKB-kz-Bd6" firstAttribute="centerX" secondItem="jZ3-Jj-Okb" secondAttribute="centerX" id="tT9-4g-gNY"/>
+                                            <constraint firstItem="jZ3-Jj-Okb" firstAttribute="top" secondItem="V68-uY-s9G" secondAttribute="top" id="ybx-Sf-OZw"/>
+                                        </constraints>
                                         <connections>
+                                            <outlet property="artistLabel" destination="RKB-kz-Bd6" id="0BL-hu-X4A"/>
                                             <outlet property="imageView" destination="jZ3-Jj-Okb" id="dh1-Lo-BSW"/>
                                             <segue destination="tOn-4p-rCp" kind="show" id="dSS-Pg-89A"/>
                                         </connections>
