--- a/HealingArts/About.storyboard
+++ b/HealingArts/About.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="31M-F2-wMh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lJ4-Cr-pqr">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--About-->
+        <!--About View Controller-->
         <scene sceneID="YZy-Fa-zEG">
             <objects>
                 <viewController id="31M-F2-wMh" customClass="AboutViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,14 +19,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jTO-6V-CnX">
-                                <rect key="frame" x="0.0" y="140" width="414" height="212"/>
+                                <rect key="frame" x="0.0" y="184" width="414" height="212"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="212" id="BYN-vP-dYR"/>
                                     <constraint firstAttribute="width" constant="414" id="eAL-ka-wsg"/>
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DWs-bt-aIo">
-                                <rect key="frame" x="20" y="360" width="374" height="216.5"/>
+                                <rect key="frame" x="20" y="404" width="374" height="216.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="374" id="4cL-oU-iac"/>
@@ -38,7 +38,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7De-Ib-Dfc">
-                                <rect key="frame" x="92" y="611.5" width="230" height="30"/>
+                                <rect key="frame" x="92" y="655.5" width="230" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="8vW-0N-Zkw"/>
                                     <constraint firstAttribute="width" constant="230" id="azR-Er-jWU"/>
@@ -52,7 +52,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fey-4S-Eqa">
-                                <rect key="frame" x="0.0" y="68" width="414" height="48"/>
+                                <rect key="frame" x="0.0" y="112" width="414" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="414" id="QcZ-Ru-7ql"/>
                                     <constraint firstAttribute="height" constant="48" id="mhv-2t-Zhf"/>
@@ -80,7 +80,13 @@ The Healing Arts program will be comprised of a growing list of elements to help
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="zQJ-RX-R9C"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="About" image="aboutIcon" id="Okd-1X-uCt"/>
+                    <navigationItem key="navigationItem" id="sfw-V5-H5A">
+                        <barButtonItem key="rightBarButtonItem" title="Leave Feedback!" id="Z7P-Aq-brF">
+                            <connections>
+                                <segue destination="raL-tL-yx8" kind="show" id="FtY-Qt-EMH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="aboutPageInfoImageView" destination="jTO-6V-CnX" id="jhd-i4-OLL"/>
                         <outlet property="infoButton" destination="7De-Ib-Dfc" id="nlu-fO-9Vg"/>
@@ -89,6 +95,34 @@ The Healing Arts program will be comprised of a growing list of elements to help
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q88-nm-CZT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2934.7826086956525" y="-1280.3571428571429"/>
+        </scene>
+        <!--Feedback-->
+        <scene sceneID="hhU-Nx-n05">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Feedback" id="raL-tL-yx8" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jo1-Gj-F3x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3777" y="-1249"/>
+        </scene>
+        <!--About-->
+        <scene sceneID="tJW-pt-RsY">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lJ4-Cr-pqr" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="About" image="aboutIcon" id="Okd-1X-uCt"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rv6-eK-FwH">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.68627450980000004" green="0.062745098040000002" blue="0.17254901959999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="31M-F2-wMh" kind="relationship" relationship="rootViewController" id="e24-nU-vuq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CyR-YW-IUy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2024.6376811594205" y="-1280.3571428571429"/>
         </scene>
