--- a/HealingArts/About.storyboard
+++ b/HealingArts/About.storyboard
@@ -19,15 +19,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jTO-6V-CnX">
-                                <rect key="frame" x="0.0" y="184" width="414" height="212"/>
+                                <rect key="frame" x="0.0" y="128" width="414" height="212"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="212" id="BYN-vP-dYR"/>
                                     <constraint firstAttribute="width" constant="414" id="eAL-ka-wsg"/>
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DWs-bt-aIo">
-                                <rect key="frame" x="20" y="404" width="374" height="216.5"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="20" y="348" width="374" height="216.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="374" id="4cL-oU-iac"/>
                                     <constraint firstAttribute="height" constant="216.5" id="OmW-lg-MFY"/>
@@ -37,11 +36,33 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fey-4S-Eqa">
+                                <rect key="frame" x="0.0" y="88" width="414" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="414" id="QcZ-Ru-7ql"/>
+                                    <constraint firstAttribute="height" constant="40" id="mhv-2t-Zhf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Arial-BoldItalicMT" family="Arial" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rXu-9I-65p">
+                                <rect key="frame" x="90" y="571.5" width="234" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="jgZ-Ce-oQ2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
+                                <state key="normal" title="Words from the artists">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7De-Ib-Dfc">
-                                <rect key="frame" x="92" y="655.5" width="230" height="30"/>
+                                <rect key="frame" x="92" y="608.5" width="230" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="8vW-0N-Zkw"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="B6H-ff-yV4"/>
                                     <constraint firstAttribute="width" constant="230" id="azR-Er-jWU"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="230" id="pcY-7r-Kt9"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
                                 <state key="normal" title="More Info">
@@ -51,32 +72,28 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                     <action selector="onInfoButtonPressed:" destination="31M-F2-wMh" eventType="touchUpInside" id="vhV-RL-bIy"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fey-4S-Eqa">
-                                <rect key="frame" x="0.0" y="112" width="414" height="48"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="414" id="QcZ-Ru-7ql"/>
-                                    <constraint firstAttribute="height" constant="48" id="mhv-2t-Zhf"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Arial-BoldItalicMT" family="Arial" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="7De-Ib-Dfc" firstAttribute="top" secondItem="DWs-bt-aIo" secondAttribute="bottom" constant="35" id="3sO-RN-Rkh"/>
                             <constraint firstItem="fey-4S-Eqa" firstAttribute="leading" secondItem="zQJ-RX-R9C" secondAttribute="leading" id="GZ8-Le-nE6"/>
                             <constraint firstItem="DWs-bt-aIo" firstAttribute="top" secondItem="jTO-6V-CnX" secondAttribute="bottom" constant="8" id="JAG-UF-Nl1"/>
+                            <constraint firstItem="7De-Ib-Dfc" firstAttribute="leading" secondItem="zQJ-RX-R9C" secondAttribute="leading" constant="92" id="MFt-aq-mMX"/>
+                            <constraint firstItem="rXu-9I-65p" firstAttribute="top" secondItem="DWs-bt-aIo" secondAttribute="bottom" constant="7" id="P6s-Oy-gYX"/>
                             <constraint firstItem="7De-Ib-Dfc" firstAttribute="leading" secondItem="zQJ-RX-R9C" secondAttribute="leading" constant="92" id="Ti4-j8-c4y"/>
                             <constraint firstItem="zQJ-RX-R9C" firstAttribute="trailing" secondItem="7De-Ib-Dfc" secondAttribute="trailing" constant="92" id="TuI-1a-P0p"/>
+                            <constraint firstItem="7De-Ib-Dfc" firstAttribute="top" secondItem="rXu-9I-65p" secondAttribute="bottom" constant="7" id="Xuf-I4-XX7"/>
                             <constraint firstItem="DWs-bt-aIo" firstAttribute="top" secondItem="jTO-6V-CnX" secondAttribute="bottom" constant="8" id="acX-6y-xbc"/>
+                            <constraint firstItem="zQJ-RX-R9C" firstAttribute="trailing" secondItem="7De-Ib-Dfc" secondAttribute="trailing" constant="92" id="bS1-zD-ydT"/>
+                            <constraint firstItem="7De-Ib-Dfc" firstAttribute="top" secondItem="rXu-9I-65p" secondAttribute="bottom" constant="7" id="c2G-8y-8eB"/>
                             <constraint firstItem="zQJ-RX-R9C" firstAttribute="trailing" secondItem="DWs-bt-aIo" secondAttribute="trailing" constant="20" id="gVX-rg-1Jc"/>
                             <constraint firstItem="DWs-bt-aIo" firstAttribute="leading" secondItem="zQJ-RX-R9C" secondAttribute="leading" constant="20" id="jBZ-5d-ckY"/>
-                            <constraint firstItem="fey-4S-Eqa" firstAttribute="top" secondItem="zQJ-RX-R9C" secondAttribute="top" constant="24" id="jsf-vF-ZMz"/>
+                            <constraint firstItem="fey-4S-Eqa" firstAttribute="top" secondItem="zQJ-RX-R9C" secondAttribute="top" id="jsf-vF-ZMz"/>
                             <constraint firstItem="jTO-6V-CnX" firstAttribute="leading" secondItem="zQJ-RX-R9C" secondAttribute="leading" id="omm-pI-Rz0"/>
+                            <constraint firstAttribute="trailing" secondItem="rXu-9I-65p" secondAttribute="trailing" constant="90" id="p6D-nX-jOe"/>
+                            <constraint firstItem="rXu-9I-65p" firstAttribute="leading" secondItem="nln-gl-iDy" secondAttribute="leading" constant="90" id="rgs-2P-MgU"/>
                             <constraint firstAttribute="trailing" secondItem="fey-4S-Eqa" secondAttribute="trailing" id="riY-dj-6Nt"/>
                             <constraint firstItem="zQJ-RX-R9C" firstAttribute="trailing" secondItem="jTO-6V-CnX" secondAttribute="trailing" id="tTL-Up-isc"/>
-                            <constraint firstItem="jTO-6V-CnX" firstAttribute="top" secondItem="fey-4S-Eqa" secondAttribute="bottom" constant="24" id="z8r-bw-xn7"/>
+                            <constraint firstItem="jTO-6V-CnX" firstAttribute="top" secondItem="fey-4S-Eqa" secondAttribute="bottom" id="z8r-bw-xn7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="zQJ-RX-R9C"/>
                     </view>
@@ -89,6 +106,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                     </navigationItem>
                     <connections>
                         <outlet property="aboutPageInfoImageView" destination="jTO-6V-CnX" id="jhd-i4-OLL"/>
+                        <outlet property="artistsWordsButton" destination="rXu-9I-65p" id="2gK-CB-Rge"/>
                         <outlet property="infoButton" destination="7De-Ib-Dfc" id="nlu-fO-9Vg"/>
                         <outlet property="infoTextView" destination="DWs-bt-aIo" id="Vca-uk-5Ow"/>
                         <outlet property="titleLabel" destination="fey-4S-Eqa" id="7aw-vm-Dn9"/>
@@ -96,7 +114,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q88-nm-CZT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2934.7826086956525" y="-1280.3571428571429"/>
+            <point key="canvasLocation" x="2933.5999999999999" y="-1280.5097451274364"/>
         </scene>
         <!--Feedback-->
         <scene sceneID="hhU-Nx-n05">
